Adding questionnaire (No CSS yet)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
 <!DOCTYPE html>
+
+<h1>Questionnaire</h1>
+
+<body>
+        Are you:<br>
+        <input type="radio" name="sex" value="male">Male<br>
+        <input type="radio" name="sex" value="female">Female<br>
+        <br>
+        How are you feeling?<br>
+        <input type="radio" name="emotion" value="happy">Happy<br>
+        <input type="radio" name="emotion" value="tired">Tired<br>
+        <input type="radio" name="emotion" value="sad">Sad<br>
+        <br>
+        How often do you feel this way?<br>
+        <input type="radio" name="time" value="always">Almost always<br>
+        <input type="radio" name="time" value="often">Often<br>
+        <input type="radio" name="time" value="not often">Not very often<br>
+        <br>
+        Do you ever feel like it is hard to do what you want to do because you are tired?<br>
+        <input type="radio" name="tired" value="yes">Yes, quite often<br>
+        <input type="radio" name="tired" value="no">Not really<br>
+        <br>
+        <button type="button" id="submit">Submit Form</button>
+</body>
+</html>
