Added some content

--- a/stress.html
+++ b/stress.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 
 <!-- TODO: Create a page about resources and help for stress-->
+<h2>Here is some information that coul help with stress.</h2>
 
+<p>
+<a href="https://www.crisistextline.org/help-for-depression/?gclid=CjwKCAjwrKr8BRB_EiwA7eFapoN0Ex9pb1uQDYOC8Qy067njOLzxMlRSBy1ZdLQoC8f81JmcqVJ-gRoCfgcQAvD_BwE">Here</a> is a link to the Crisis Text Line.
+If you are feeling too overwhelmed by stress it is okay to reach out for help.
+</p>
 
 </html>
