--- a/stress.html
+++ b/stress.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 
 <!-- TODO: Create a page about resources and help for stress-->
-<h2>Here is some information that coul help with stress.</h2>
+<h1>Information that could help with <u>Stress</u>.</h1>
 
 <p>
 <a href="https://www.crisistextline.org/help-for-depression/?gclid=CjwKCAjwrKr8BRB_EiwA7eFapoN0Ex9pb1uQDYOC8Qy067njOLzxMlRSBy1ZdLQoC8f81JmcqVJ-gRoCfgcQAvD_BwE">Here</a> is a link to the Crisis Text Line.
-If you are feeling too overwhelmed by stress it is okay to reach out for help.
+If you are feeling overwhelmed by stress it is okay to reach out for help.
+<br>
+Sometimes life can be stressful. Make sure that you are taking care of yourself mentally and physically during these trying times.
+<br> <br>
+<b>Here are some ways to take care of yourself:</b>
+<ul>
+    <li><a href = "https://thecrookedcarrot.com/how-to-build-balanced-meal/">Eat a well balanced meal.</a> Eating well not only will improve your physical health, but allow you to feel more confident and in control.</li> <br>
+    <li><a href = "https://www.wholelifechallenge.com/how-to-design-your-own-workout-program-a-guide-for-beginners/">Create and follow a workout routine.</a> Take the time to work on yourself and let your stress fall away.</li> <br>
+    <li><a href = "https://www.mayoclinic.org/tests-procedures/meditation/in-depth/meditation/art-20045858">Engage in meditation.</a> While some are hesitant to meditation, it may be just what you need to find relaxation.</li> <br>
+    <li><b>Talk to others.</b> It is okay to reach out to friends, parents, counselors, or anyone else who can help you cope.</li> <br>
+    <li><a href = "https://www.psychologytoday.com/us/therapists/stress">Recognize when you need help.</a> Reach out and find a therapist. Coping with stress can be difficult alone and therapists are there to help ease the process.</li>
+
+</ul>
+
 </p>
 
 </html>
