Adding content and small bug fixes

--- a/depression.html
+++ b/depression.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 
 <!-- TODO: Create a page about resources and help for depression-->
+<h1>Information to help cope with <u>Depression</u>.</h1>
 
+<h2 style="background-color: salmon;">National Suicide Prevention Lifeline: <u><span style="color: rgb(15, 26, 190)">800-273-8255</span></u></h2>
+<p><a href = "https://suicidepreventionlifeline.org/">Official Website</a></p>
+<br>
+<body>Depression is a serious issue that many suffer from, all over the world. More is being learned about depression and its effects every day. Regardless of whether you are diagnosed,
+      there are steps that you can take in order to improve your well-being and outlook on life.
+</body>
+<br> <br>
+<b>Here are some ways to improve your life:</b>
+<ul>
+    <li><a href="https://www.samhsa.gov/find-help/national-helpline"><b>SAMHSA's National Helpline:</b></a><span style="color: rgb(15, 26, 190)"> 1-800-662-HELP (4357)</span></li>
+    <li><b>Build a social support network.</b> Now more than ever it is important to form strong bonds with those around us. Knowing you can count on a loved one goes a long way towards improving depression.</li>
+    <li></li>
+
+</ul>
 
 </html>
