--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
         <input type="radio" name="tired" value="no">Not really<br>
         <br>
         <button type="button" id="submit">Submit Form</button>
+
+        <br>
+        <a href="./stress.html">Stress</a>
+        <br>
+        <a href="./depression.html">Depression</a>
 </body>
 </html>
