--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <head>
     <Style>
                 h1 {text-align: center;}
-                h2 {text-align: center;)
+                h2 {text-align: center;}
         </Style>
 </head>
 <h1 style="font-family:'Courier New'">Questionnaire</h1>
