More content added

--- a/anxiety.html
+++ b/anxiety.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 
 <!-- TODO: Create a page about resources and help for anxiety-->
+<h1>Information to help cope with <u>Anxiety</u>.</h1>
+<h2 style="background-color: salmon;">National Suicide Prevention Lifeline: <u><span style="color: rgb(15, 26, 190)">800-273-8255</span></u></h2>
+
+<p><br>Anxiety is a something that everyone has experienced at some point in their life. Whether it is social anxiety, trauma, or OCD, anxiety impacts many.
+<br><br><b>Here are some ways to help reduce the effects of anxiety:</b></p>
+<ul>
+    <li><b>Breathe.</b> Deep breathing helps to calm down when anxiety is high. Whether you are doing a specific breathing exercise or just focusing on your inhales and exhales, 
+                        this technique will help to re-center yourself.</li>
+    <li><a href = "https://www.betterhelp.com/start/?help_with=Anxiety">Seek help.</a> It can never hurt to reach out to others when you suffer from constant anxiety. It is worth it in the end
+                                                                                        to take the steps needed find peace.</li>
+    <li><b>Just do something.</b> You will be performing a task that takes your mind off of what is stressful. Regain some control by doing something.</li>
+</ul>
 
 
 </html>
