--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
         <a href="./stress.html">Stress</a>
         <br>
         <a href="./depression.html">Depression</a>
+        <br>
+        <a href="./index2.html">Index2 View</a>
+        <br>
+        <a href="./anxiety.html">Anxiety</a>
 </body>
 </html>
