--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <img src="MentalHealthHands.jpg", width="1450" height="400"></img>
 
 <h1 class="h" style="text-align:center">It's a BIG Deal</h1>
-<ul class="homework">
+<ul class="body">
     <li class="a"> There is both a notable variety and significance in presence of mental illnesses in society today, 
         including anxiety disorders such as phobias, panic attacks, and anxiety, mood disorders such as depression and bipolar 
         disorder, and more general disorders such as obsessive-compulsive disorders and eating disorders, to name a few. (1)
@@ -32,7 +32,7 @@
     </li>
 
 </ul>
-<a class="button" href="http://www.youtube.com">Youtube</a>
+<a class="button" href="https://www.youtube.com/watch?v=NSA1BE6KUr0">Youtube!</a>
 <body>
 
 </html>
