--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>Mental Health Awareness</title>
@@ -8,7 +9,7 @@
 <img src="MentalHealthHands.jpg", width="1450" height="400"></img>
 
 <h1 class="h" style="text-align:center">It's a BIG Deal</h1>
-<ul class="body">
+<ul class="homework">
     <li class="a"> There is both a notable variety and significance in presence of mental illnesses in society today, 
         including anxiety disorders such as phobias, panic attacks, and anxiety, mood disorders such as depression and bipolar 
         disorder, and more general disorders such as obsessive-compulsive disorders and eating disorders, to name a few. (1)
@@ -32,7 +33,39 @@
     </li>
 
 </ul>
-<a class="button" href="https://www.youtube.com/watch?v=NSA1BE6KUr0">Youtube!</a>
+<a class="button" href="http://www.youtube.com">Youtube</a>
 <body>
 
+<h1>Questionnaire</h1>
+
+<body>
+        Are you:<br>
+        <input type="radio" name="sex" value="male">Male<br>
+        <input type="radio" name="sex" value="female">Female<br>
+        <br>
+        How are you feeling?<br>
+        <input type="radio" name="emotion" value="happy">Happy<br>
+        <input type="radio" name="emotion" value="tired">Tired<br>
+        <input type="radio" name="emotion" value="sad">Sad<br>
+        <br>
+        How often do you feel this way?<br>
+        <input type="radio" name="time" value="always">Almost always<br>
+        <input type="radio" name="time" value="often">Often<br>
+        <input type="radio" name="time" value="not often">Not very often<br>
+        <br>
+        Do you ever feel like it is hard to do what you want to do because you are tired?<br>
+        <input type="radio" name="tired" value="yes">Yes, quite often<br>
+        <input type="radio" name="tired" value="no">Not really<br>
+        <br>
+        <button type="button" id="submit">Submit Form</button>
+
+        <br>
+        <a href="./stress.html">Stress</a>
+        <br>
+        <a href="./depression.html">Depression</a>
+        <br>
+        <a href="./index2.html">Index2 View</a>
+        <br>
+        <a href="./anxiety.html">Anxiety</a>
+</body>
 </html>
