--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<title>Mental Health Awareness</title>
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>Mental Health Awareness</title>
