Addition of Dropdown Menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <!--<p>Testing a p tag</p> -->
 <img src="MentalHealthHands.jpg", width="1450" height="400"></img>
 
+<div class = "dropdown"> 
+    <button class="dropbtn">Menu</button>
+    <div class="dropdown-content">
+        <a href="./anxiety.html">Anxiety Help</a>
+        <a href="./depression.html">Depression Help</a>
+        <a href="./stress.html">Stress Help</a>
+    </div>
+</div>
+
 <h1 class="h" style="text-align:center">It's a BIG Deal</h1>
 <ul class="homework">
     <li class="a"> There is both a notable variety and significance in presence of mental illnesses in society today, 
