--- a/depression.html
+++ b/depression.html
@@ -14,7 +14,7 @@
 <ul>
     <li><a href="https://www.samhsa.gov/find-help/national-helpline"><b>SAMHSA's National Helpline:</b></a><span style="color: rgb(15, 26, 190)"> 1-800-662-HELP (4357)</span></li>
     <li><b>Build a social support network.</b> Now more than ever it is important to form strong bonds with those around us. Knowing you can count on a loved one goes a long way towards improving depression.</li>
-    <li></li>
+    <li><a href="https://adaa.org/supportgroups">Find a support group.</a> Having others there to support you will make all of the difference. You will know that you aren't alone.</li>
 
 </ul>
 
