--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
     </li>
 
 </ul>
-<a class="button" href="http://www.youtube.com">Youtube</a>
+<a class="button" href="https://www.youtube.com/watch?v=NSA1BE6KUr0">Youtube!</a>
+<a class="button2" href="https://suicidepreventionlifeline.org/">National Suicide Prevention Hotline</a>
+<a class="button3" href="https://americanaddictioncenters.org/rehab-guide/alcohol-drug-hotline">Drug-Alcohol hotline</a>
+<a class="button4" href="https://www.mentalhelp.net/depression/hotline/">Depression Hotline</a>
+<a class="button5" href="https://nami.org/help">Donate</a>
 <body>
 
 <h1>Questionnaire</h1>
