Creation of About Us page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="./anxiety.html">Anxiety Help</a>
         <a href="./depression.html">Depression Help</a>
         <a href="./stress.html">Stress Help</a>
+        <a href="./AboutUs.html">About Us</a>
     </div>
 </div>
 
@@ -33,7 +34,7 @@
             Sources: 
         </ul>
         <ul>
-            1. <a class="button2" href="https://www.webmd.com/mental-health/mental-health-types-illness#1">WebMD-Types of Mental Illness</a>
+            1. <a class="button6" href="https://www.webmd.com/mental-health/mental-health-types-illness#1">WebMD-Types of Mental Illness</a>
         </ul>
         <ul>
             2. Key substance use and mental health indicators in the United States: Results from the 2015 National
