--- a/AboutUs.html
+++ b/AboutUs.html
@@ -24,6 +24,7 @@
 
 
 <h2>Caleb Kathman</h2>
-<p>Caleb Kathman is a sophomore at the University of North Carolina at Chapel-Hill. He is pursuing a B.S. in Computer Science with minors in mathematics and music.<br></p>
+<p>Caleb Kathman is a sophomore at the University of North Carolina at Chapel-Hill. He is pursuing a B.S. in Computer Science with minors in mathematics and music.<br>
+   Contact at <span style="color: skyblue;"><u>cjkathman@unc.edu</u></span></p>
 
 </html>
