--- a/index2.html
+++ b/index2.html
@@ -25,13 +25,157 @@ function upAnxiety() {
 <br>
 
 <form>
-    <p> Are you anxious:</p>
-    <input type="radio" name="choice" value="yes"> Yes<br>
-    <input type="radio" name="choice" value="no"> No<br>
+    <p> Do you usually get less than 7 hours of sleep per night? :</p>
+    <input type="radio" name="general.sleep" value="yes"> Yes<br>
+    <input type="radio" name="general.sleep" value="no"> No<br>
     <br>
-    <p> Are you REALLY anxious:</p> <br>
-    <input type="radio" name="choice2" value="yes"> Yes<br>
-    <input type="radio" name="choice2" value="no"> No<br>
+    <p> Do you ever not know why you’re feeling the way you feel? :</p>
+    <input type="radio" name="general.mood" value="yes"> Yes<br>
+    <input type="radio" name="general.mood" value="no"> No<br>
+    <br>
+    <p> Do you ever feel disconnected from what’s around you? :</p>
+    <input type="radio" name="general.connection" value="yes"> Yes<br>
+    <input type="radio" name="general.connection" value="no"> No<br>
+    <br>
+    <p> Has your work-ethic notably declined recently? :</p>
+    <input type="radio" name="general.actions" value="yes"> Yes<br>
+    <input type="radio" name="general.actions" value="no"> No<br>
+    <br>
+    <p> Is concentrating harder for you now than it used to be? :</p>
+    <input type="radio" name="general.focus" value="yes"> Yes<br>
+    <input type="radio" name="general.focus" value="no"> No<br>
+    <br>
+    <p> Do you frequently feel restless and nervous? :</p>
+    <input type="radio" name="anxiety.one" value="yes"> Yes<br>
+    <input type="radio" name="anxiety.one" value="no"> No<br>
+    <br>
+    <p> Do you frequently feel worried so much that it makes it difficult to concentrate? :</p>
+    <input type="radio" name="anxiety.two" value="yes"> Yes<br>
+    <input type="radio" name="anxiety.two" value="no"> No<br>
+    <br>
+    <p> Does trying new things make you feel significantly uncomfortable? :</p>
+    <input type="radio" name="anxiety.three" value="yes"> Yes<br>
+    <input type="radio" name="anxiety.three" value="no"> No<br>
+    <br>
+    <p> Have you experienced periods of time that you are significantly more energized and eager to be productive? :</p>
+    <input type="radio" name="bp.one" value="yes"> Yes<br>
+    <input type="radio" name="bp.one" value="no"> No<br>
+    <br>
+    <p> Have you experienced periods of time that you are significantly less energized and motivated to do anything? :</p>
+    <input type="radio" name="bp.two" value="yes"> Yes<br>
+    <input type="radio" name="bp.two" value="no"> No<br>
+    <br>
+    <p> Have you experienced periods of time that you are noticeably more irritable and frustrated than usual? :</p>
+    <input type="radio" name="bp.three" value="yes"> Yes<br>
+    <input type="radio" name="bp.three" value="no"> No<br>
+    <br>
+    <p> Do you ever feel like no one can understand you? :</p>
+    <input type="radio" name="bp.four" value="yes"> Yes<br>
+    <input type="radio" name="bp.four" value="no"> No<br>
+    <br>
+    <p> Do you ever fixate on your body type and physical appearance? :</p>
+    <input type="radio" name="bodydys.one" value="yes"> Yes<br>
+    <input type="radio" name="bodydys.one" value="no"> No<br>
+    <br>
+    <p> Do you focus on your physical flaws? :</p>
+    <input type="radio" name="bodydys.two" value="yes"> Yes<br>
+    <input type="radio" name="bodydys.two" value="no"> No<br>
+    <br>
+    <p> Do you ever feel like you’re not good enough because you don’t look good? :</p>
+    <input type="radio" name="bodydys.three" value="yes"> Yes<br>
+    <input type="radio" name="bodydys.three" value="no"> No<br>
+    <br>
+    <p> Do you frequently feel down or foggy? :</p>
+    <input type="radio" name="depression.one" value="yes"> Yes<br>
+    <input type="radio" name="depression.one" value="no"> No<br>
+    <br>
+    <p> Do you frequently feel tired and lack energy, no matter how much sleep you get? :</p>
+    <input type="radio" name="depression.two" value="yes"> Yes<br>
+    <input type="radio" name="depression.two" value="no"> No<br>
+    <br>
+    <p> Have you recently experienced a decline of interest in things that use to make you happy? :</p>
+    <input type="radio" name="depression.three" value="yes"> Yes<br>
+    <input type="radio" name="depression.three" value="no"> No<br>
+    <br>
+    <p> Do you ever wish that you could fall asleep and wake up sometime in the future? :</p>
+    <input type="radio" name="depression.four" value="yes"> Yes<br>
+    <input type="radio" name="depression.four" value="no"> No<br>
+    <br>
+    <p> Have you experienced significant weight loss recently? :</p>
+    <input type="radio" name="eatdiso.one" value="yes"> Yes<br>
+    <input type="radio" name="eatdiso.one" value="no"> No<br>
+    <br>
+    <p> Have you ever intentionally avoid meals? :</p>
+    <input type="radio" name="eatdiso.two" value="yes"> Yes<br>
+    <input type="radio" name="eatdiso.two" value="no"> No<br>
+    <br>
+    <p> Have you ever made yourself throw-up after eating more than you wish you had? :</p>
+    <input type="radio" name="eatdiso.three" value="yes"> Yes<br>
+    <input type="radio" name="eatdiso.three" value="no"> No<br>
+    <br>
+    <p> Do you ever feel like your eating habits are out of your control? :</p>
+    <input type="radio" name="eatdiso.four" value="yes"> Yes<br>
+    <input type="radio" name="eatdiso.four" value="no"> No<br>
+    <br>
+    <p> Do you ever feel stressed when your things are out of place? :</p>
+    <input type="radio" name="ocd.one" value="yes"> Yes<br>
+    <input type="radio" name="ocd.one" value="no"> No<br>
+    <br>
+    <p> Do you ever feel like you have to do certain things for no reason? :</p>
+    <input type="radio" name="ocd.two" value="yes"> Yes<br>
+    <input type="radio" name="ocd.two" value="no"> No<br>
+    <br>
+    <p> Do you have any small rituals or actions that you frequently repeat? :</p>
+    <input type="radio" name="ocd.three" value="yes"> Yes<br>
+    <input type="radio" name="ocd.three" value="no"> No<br>
+    <br>
+    <p> Do you ever feel your heart pounding without knowing why? :</p>
+    <input type="radio" name="panic.one" value="yes"> Yes<br>
+    <input type="radio" name="panic.one" value="no"> No<br>
+    <br>
+    <p> Do you ever feel so anxious that you aren’t able to move or think clearly? :</p>
+    <input type="radio" name="panic.two" value="yes"> Yes<br>
+    <input type="radio" name="panic.two" value="no"> No<br>
+    <br>
+    <p> Do you ever feel like you can’t catch your breath without knowing why? :</p>
+    <input type="radio" name="panic.three" value="yes"> Yes<br>
+    <input type="radio" name="panic.three" value="no"> No<br>
+    <br>
+    <p> Does a trigger ever cause you to feel so scared that you get dizzy and can’t catch your breath? :</p>
+    <input type="radio" name="phobia.one" value="yes"> Yes<br>
+    <input type="radio" name="phobia.one" value="no"> No<br>
+    <br>
+    <p> Does a trigger ever cause you to feel so overwhelmed that your chest hurts or you get nauseous? :</p>
+    <input type="radio" name="phobia.two" value="yes"> Yes<br>
+    <input type="radio" name="phobia.two" value="no"> No<br>
+    <br>
+    <p> Do people tell you that you have irrational fears? :</p>
+    <input type="radio" name="phobia.three" value="yes"> Yes<br>
+    <input type="radio" name="phobia.three" value="no"> No<br>
+    <br>
+    <p> Do you feel like a something bad is about to happen? :</p>
+    <input type="radio" name="schizo.one" value="yes"> Yes<br>
+    <input type="radio" name="schizo.one" value="no"> No<br>
+    <br>
+    <p> Do you ever hear or see things that others don’t seem to notice? :</p>
+    <input type="radio" name="schizo.two" value="yes"> Yes<br>
+    <input type="radio" name="schizo.two" value="no"> No<br>
+    <br>
+    <p> Do you ever feel like you are being followed? :</p>
+    <input type="radio" name="schizo.three" value="yes"> Yes<br>
+    <input type="radio" name="schizo.three" value="no"> No<br>
+    <br>
+    <p> Do you ever wish that you weren’t alive? :</p>
+    <input type="radio" name="sui.one" value="yes"> Yes<br>
+    <input type="radio" name="sui.one" value="no"> No<br>
+    <br>
+    <p> Do you ever think about ending your life? :</p>
+    <input type="radio" name="sui.two" value="yes"> Yes<br>
+    <input type="radio" name="sui.two" value="no"> No<br>
+    <br>
+    <p> Do you ever question why you exist? :</p>
+    <input type="radio" name="sui.three" value="yes"> Yes<br>
+    <input type="radio" name="sui.three" value="no"> No<br>
     <input type="button" id="submit" value="Show Selected Value">
 </form>
 
