--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div class = "dropdown"> 
     <button class="dropbtn">Menu</button>
     <div class="dropdown-content">
+        <a href="./index2.html">Questionnaire</a>
         <a href="./anxiety.html">Anxiety Help</a>
         <a href="./depression.html">Depression Help</a>
         <a href="./stress.html">Stress Help</a>
