--- a/MentalHealthHelp.html
+++ b/MentalHealthHelp.html
@@ -3,11 +3,11 @@
     <link rel="stylesheet" href="styles.css">
     <title>Mental Health Awareness</title>
 </head>    
-<body>
-<!--<p>Testing a p tag</p> -->
+<body style="background-color:powderblue;">
 <img src="MentalHealthHands.jpg", width="1450" height="400"></img>
 
 <h1 class="h" style="text-align:center">It's a BIG Deal</h1>
+<p class="subheader", style="text-align:center">Some Friendly Advice and Information from Students at UNC Chapel Hill </p>
 <ul class="body">
     <li class="a"> There is both a notable variety and significance in presence of mental illnesses in society today, 
         including anxiety disorders such as phobias, panic attacks, and anxiety, mood disorders such as depression and bipolar 
@@ -22,7 +22,7 @@
             Sources: 
         </ul>
         <ul>
-            1. <a class="button2" href="https://www.webmd.com/mental-health/mental-health-types-illness#1">WebMD-Types of Mental Illness</a>
+            1. <a class="web" href="https://www.webmd.com/mental-health/mental-health-types-illness#1">WebMD-Types of Mental Illness</a>
         </ul>
         <ul>
             2. Key substance use and mental health indicators in the United States: Results from the 2015 National
@@ -32,7 +32,16 @@
     </li>
 
 </ul>
+<p>
+    <img src="Anxiety.png", height="400"></img>
+    <img src="mentalhealthimg.webp", width="500", height="400"></img>
+    <img src="hereforyou.png", height="400", width="390"></img>
+</p>
 <a class="button" href="https://www.youtube.com/watch?v=NSA1BE6KUr0">Youtube!</a>
+<a class="button2" href="https://suicidepreventionlifeline.org/">National Suicide Prevention Hotline</a>
+<a class="button3" href="https://americanaddictioncenters.org/rehab-guide/alcohol-drug-hotline">Drug-Alcohol hotline</a>
+<a class="button4" href="https://www.mentalhelp.net/depression/hotline/">Depression Hotline</a>
+<a class="button5" href="https://nami.org/help">Donate</a>
 <body>
 
 </html>
