--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
     </li>
 
 </ul>
+<p>
+    <img src="Anxiety.png", height="400"></img>
+    <img src="mentalhealthimg.webp", width="500", height="400"></img>
+    <img src="hereforyou.png", height="400", width="390"></img>
+</p>
+
 <a class="button" href="https://www.youtube.com/watch?v=NSA1BE6KUr0">Youtube!</a>
 <a class="button2" href="https://suicidepreventionlifeline.org/">National Suicide Prevention Hotline</a>
 <a class="button3" href="https://americanaddictioncenters.org/rehab-guide/alcohol-drug-hotline">Drug-Alcohol hotline</a>
