--- a/index2.html
+++ b/index2.html
@@ -103,6 +103,53 @@ function upSui() {
         </Style>
 </head>
 <br>
+<style>
+        .dropbtn {
+    background-color: lightgray;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn {background-color: #999;}
+</style>
+<div class = "dropdown"> 
+        <button class="dropbtn">Menu</button>
+        <div class="dropdown-content">
+            <a href="./index.html">Front Page</a>
+            <a href="./anxiety.html">Anxiety Help</a>
+            <a href="./depression.html">Depression Help</a>
+            <a href="./stress.html">Stress Help</a>
+            <a href="./AboutUs.html">About Us</a>
+        </div>
+    </div>
+
 <br>
 
 <h1 style="font-family:'Courier New'">Mental Health Questionnaire</h1>
