--- a/anxiety.html
+++ b/anxiety.html
@@ -13,6 +13,6 @@
                                                                                         to take the steps needed find peace.</li>
     <li><b>Just do something.</b> You will be performing a task that takes your mind off of what is stressful. Regain some control by doing something.</li>
 </ul>
-
-
+<br>
+<p style="font-size: small;">*All information that is provided is based on our collective knowledge as students. If you believe something is seriously wrong, reach out to a professional for help.</p>
 </html>
