--- a/depression.html
+++ b/depression.html
@@ -17,5 +17,7 @@
     <li><a href="https://adaa.org/supportgroups">Find a support group.</a> Having others there to support you will make all of the difference. You will know that you aren't alone.</li>
 
 </ul>
+<br>
+<p style="font-size: small;">*All information that is provided is based on our collective knowledge as students. If you believe something is seriously wrong, reach out to a professional for help.</p>
 
 </html>
