--- a/stress.html
+++ b/stress.html
@@ -20,5 +20,7 @@ Sometimes life can be stressful. Make sure that you are taking care of yourself 
 </ul>
 
 </p>
+<br>
+<p style="font-size: small;">*All information that is provided is based on our collective knowledge as students. If you believe something is seriously wrong, reach out to a professional for help.</p>
 
 </html>
