--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,7 +4,7 @@
 
 <br>
 <h2>Alaina Randolph</h2>
-<p>Add in information here.</p>
+<p>Alaina Randolph is a Computer Science B.S. major at UNC-Chapel Hill. She is a sophomore, but plans to graduate in 2022. LinkedIn: https://www.linkedin.com/in/alaina-randolph/</p>
 
 <br>
 <br>
