--- a/MentalHealthHelp.html
+++ b/MentalHealthHelp.html
@@ -10,11 +10,16 @@
 <p class="subheader", style="text-align:center">Some Friendly Advice and Information from Students at UNC Chapel Hill </p>
 <ul class="body">
     <li class="a"> There is both a notable variety and significance in presence of mental illnesses in society today, 
-        including anxiety disorders such as phobias, panic attacks, and anxiety, mood disorders such as depression and bipolar 
-        disorder, and more general disorders such as obsessive-compulsive disorders and eating disorders, to name a few. (1)
+        including anxiety disorders such as phobias, panic attacks, mood disorders such as depression and bipolar 
+        disorder, and more general disorders such as obsessive-compulsive disorders and eating disorders to name a few. (1)
     </li>
-    <li class="b"> Particularly with 1/5 Americans experiencing one in a given year (2), it is important for individuals 
-        to be able to easily access information for both prevention and aid for mental illnesses. 
+    <li class="b"> Particularly 1/5 Americans experiencing one of the above in a given year (2), and it is important for everyone 
+        to be able to easily access information relating to mental health and illness. 
+    </li>
+    <li>
+        Anxiety and stress are more prevalent now than ever, especially in the midst of the CODID-19 pandemic. While social distancing and
+        being mindfulness about contact with others is important, there are a plethora of resources online you can access right now. Remember - 
+        social distancing does not mean social isolation.
     </li>
     <li class="c"> Our goal is to provide a simple, accessible questionnaire that can be used by anyone to generally 
         gauge their own mental health and have a way to learn more privately. 
@@ -41,7 +46,7 @@
 <a class="button2" href="https://suicidepreventionlifeline.org/">National Suicide Prevention Hotline</a>
 <a class="button3" href="https://americanaddictioncenters.org/rehab-guide/alcohol-drug-hotline">Drug-Alcohol hotline</a>
 <a class="button4" href="https://www.mentalhelp.net/depression/hotline/">Depression Hotline</a>
-<a class="button5" href="https://nami.org/help">Donate</a>
+<a class="button5" href="https://donate.nami.org/give/197406/#!/donation/checkout?utm_source=globalNav&utm_medium=website&utm_campaign=DonationTracking&c_src=WEBDG">Donate</a>
 <body>
 
 </html>
