Added Personal Info

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -17,7 +17,8 @@
 
 
 <h2>Andrew Byerle</h2>
-<p>Add in information here.</p>
+<p>Andrew is a sophomore at the University of North Carolina at Chapel Hill. He is pursuing a BS. in Computer Science and a B.A in Music.
+ Contact at <span style="color: skyblue;"><u>andran@live.unc.edu</u></span></p>
 
 <br>
 <br>
