--- a/MentalHealthHelp.html
+++ b/MentalHealthHelp.html
@@ -4,7 +4,7 @@
     <title>Mental Health Awareness</title>
 </head>    
 <body style="background-color:powderblue;">
-<img src="MentalHealthHands.jpg", width="1450" height="400"></img>
+<img class="img1" src="MentalHealthHands.jpg"></img>
 
 <h1 class="h" style="text-align:center">It's a BIG Deal</h1>
 <p class="subheader", style="text-align:center">Some Friendly Advice and Information from Students at UNC Chapel Hill </p>
