--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,7 +10,7 @@
 <br>
 
 <h2>Paige Kemper</h2>
-<p>Add in information here.</p>
+<p>Paige Kemper is a sophomore at UNC Chapel-Hill majoring in Public Policy and minoring in Computer Science and Cognitive Science. Contact at <span style="color: skyblue;"><u>paigek@live.unc.edu</u></span>.</p>
 
 <br>
 <br>
